# smoke_detector_camera

./: .gitignore  LICENSE  README.md  smoke_detector_camera.code-workspace
cad/enclosures/mark_00/: Esamblaje camara.SLDASM  tapa delantera.SLDPRT
cad/enclosures/mark_01/: Esamblaje camara.SLDASM  MG995.IGS  Tapa Trasera.SLDPRT  cuerpo camara.SLDPRT  tapa superior.SLDPRT
cad/mark_00/: Ensamblaje1.SLDASM  Esamblaje camara.SLDASM
cad/mark_00/enclosures/: Base motor.SLDPRT  Tapa Trasera.SLDPRT  cuerpo camara.SLDPRT  tapa superior.SLDPRT
cad/mark_01/: Esamblaje camara.SLDASM
cad/mark_01/components/: MG995.STEP  MG995.step.SLDPRT  Servo-MG90S[1].SLDPRT  Switch.STEP
cad/mark_01/enclosures/: pieza de rotacion.SLDPRT
cad/mark_02/components/: CameraHolder.SLDASM  DC_FAN_30x30x6.SLDPRT  DC_FAN_30x30x6.stp  Ensamblaje1.SLDASM  (+14 more)
config/: wifi.sample.config
docs/: HOG_HumanDtection.ipynb
docs/inform/: .gitignore  analisis_estatico.tex  anexos.tex  antecedentes.tex  boceto_inicial.tex  calendario.tex  conclusiones.tex  detalle_minimo.tex  encuesta.tex  estudio_de_diseño.tex  filtrado_de_conceptos.tex  generacion_de_conceptos.tex  header.tex  introduccion.tex  justificacion.tex  main.tex  objetivos.tex  portada.tex  propuesta_proyecto.tex  prototipos_realizados.tex  recomendaciones.tex  references.bib
scripts/: boundingBoxExtractor.py  directory_structure.py  motor_angle_plotter.py  rotateImages.py  snapSaver.py
src/Smoke Cam Detector/: profile.html  stadistics.html  transation-detail.html
src/cloud/: .gitignore
src/device/: README.md  sdkconfig
src/device/main/: CMakeLists.txt  base64_utils.c  camera_pins.h  camera_utils.c  camera_utils.h  connect_wifi.c  connect_wifi.h  http_handlers.c  http_handlers.h  logging_utils.c  main.c  user_roles.c  user_roles.h  web_server.c  web_server.h
src/device/main/src/: main.c  main.h  settings.h
src/device/main/src/base64/: base64_utils.c  base64_utils.h
src/device/main/src/ble_utils/: ble_utils.c  ble_utils.h  bleprph.h  misc.c
src/device/main/src/bt_utils/: bt_utils.c  bt_utils.h
src/device/main/src/camera/: camera_pins.h  camera_utils.c  camera_utils.h
src/device/main/src/connect_wifi/: connect_wifi.c  connect_wifi.h
src/device/main/src/gpio/: gpio_utils.c
src/device/main/src/gpio_interrupts/: gpio_interrupts.c  gpio_interrupts.h
src/device/main/src/gpio_state/: gpio_state.c  gpio_state.h
src/device/main/src/gpio_utils/: gpio_utils.c  gpio_utils.h
src/device/main/src/http_handlers/: http_handlers.c  http_handlers.h
src/device/main/src/logging/: logging_utils.c  logging_utils.h
src/device/main/src/motor_control/: motor_control.c  motor_control.h
src/device/main/src/task_utils/: task_utils.c  task_utils.h
src/device/main/src/user_roles/: user_roles.c  user_roles.h
src/device/main/src/web_server/: web_server.c  web_server.h
(+406 files in other folders)
